--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "url": "https://github.com/martincxx/cucumber-example.git"
   },
   "dependencies": {
-    "@wdio/cli": "^7.12.6"
+    "@wdio/cli": "^7.12.6",
+    "dotenv": "^10.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-ui-testing": "^1.0.4"
   },
   "eslintConfig": {
     "extends": [
